<resources>

    <string name="app_name">iliad</string>


    <string name="btn_login">Accedi</string>
    <string name="edt_password">Password</string>
    <string name="edt_id">ID utente</string>
    <string name="iccid">ICCID</string>
    <string name="active">Attiva</string>
    <string name="error_login">ID utente o password non corretto.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- SimFragments -->
    <string name="error_iccid">Inserire il codice di 19 cifre</string>


    <string name="tv_edit">Modifica</string>
    <string name="tv_show">Visualizza</string>
    <string name="coming_soon">Funzionalità disponibile a breve</string>

    <!-- ChangeEmailActivity -->
    <string name="change_email_title">Cambio Email</string>
    <string name="btn_change_email">Cambia Email</string>
    <string name="tv_email">Email</string>
    <string name="new_email">Nuova Email</string>

    <string name="email_wrong">Inserire una email valida</string>
    <string name="email_change_success">Il tuo indirizzo email è stato modificato con successo.</string>

    <!-- ChangePasswordActivity -->
    <string name="change_password_title">Cambio Password</string>
    <string name="edt_newpassword">Nuova Password</string>
    <string name="edt_oldpassword">Vecchia Password</string>
    <string name="btn_change_password">Cambia Password</string>
    <string name="password_change_success">La tua password è stata modificata con successo.</string>
    <string name="wrong_password">Password errata</string>

    <!-- drawer_menu -->
    <string name="nav_credit">Consumi e credito</string>
    <string name="nav_sim">Attivazione della sim</string>
    <string name="nav_info">I miei dati personali</string>
    <string name="nav_conditions">Le condizioni della mia offerta</string>
    <string name="nav_options">Le mie opzioni</string>
    <string name="nav_services">I miei servizi</string>
    <string name="nav_aboutus">Chi siamo</string>
    <string name="nav_logout">Esci</string>
    <string name="split_menu">Info</string>

    <!-- ErrorConnectionActivity -->
    <string name="errorconnection">Connessione a internet assente</string>
    <string name="errorconnection_one">Riconetti il dispositivo e riprova…</string>
    <string name="italy">Italia</string>
    <string name="estero">Estero</string>

    <!-- AboutActivity -->
    <string name="reload">Ricarica</string>
    <string name="toggle_enable">Attivo</string>
    <string name="toggle_disable">Non attivo</string>
    <string name="version">Versione</string>
    <string name="source_code">Codice Sorgente</string>
    <string name="author">Autore</string>
    <string name="content">L\'app è stata creata in modo non ufficiale ILIAD SPA. non è responsabile in alcun modo</string>
    <string name="donate">Dona</string>
    <string name="follow">Seguimi su instagram</string>
    <string name="old_version_title">Versione obsoleta</string>
    <string name="old_version">Aggiorna l\'applicazione e riprova…</string>
    <string name="update">Aggiorna</string>


    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="dialog_exit">Sei sicuro di voler uscire?</string>
    <string name="press_back">Premere ancora una volta per uscire</string>

    <string name="site_url">https://iliad-api.glitch.me/</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="loading">Caricamento…</string>
    <string name="title_activity_consumption_details">ConsumptionDetailsActivity</string>
    <string name="consumptiondetail">Dettaglio consumo</string>
    <string name="consumptionroamingdetail">Dettaglio consumo estero</string>
    <string name="stay_connected">Resta connesso</string>
    <string name="nav_contactus">Contattaci</string>
    <string name="warning">Attenzione</string>
    <string name="accept">Dichiaro di aver letto</string>
    <string name="title_activity_change_email">ChangeEmail</string>
    <string name="title_activity_charge">ChargeActivity</string>
    <string name="chargeNumber">Ricarica il tuo numero</string>
    <string name="edtCvv">CVV</string>
    <string name="edtExpiration">Data di scadenza</string>
    <string name="edtCard">Numero della carta</string>
    <string name="missing">mancante</string>
    <string name="wrong_credit_card">Carta di credito non valida</string>
    <string name="nav_voicemail">Segreteria telefonica</string>


</resources>
