<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_credit"
            android:title="@string/nav_credit"
            android:visible="false" />

        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_options"
            android:title="@string/nav_options"
            android:visible="false" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_service"
            android:title="@string/nav_services"
            android:visible="false" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_info" />

        <item
            android:id="@+id/nav_sim"
            android:icon="@drawable/ic_sim_card"
            android:title="@string/nav_sim" />

        <item
            android:id="@+id/nav_conditions"
            android:icon="@drawable/ic_conditions"
            android:title="@string/nav_conditions" />


        <item android:title="@string/split_menu">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:checkable="true"
                    android:icon="@drawable/ic_info_outline"
                    android:title="@string/nav_aboutus" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_logout" />
            </menu>
        </item>


    </group>

</menu>
