<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".ChargeActivity"
tools:showIn="@layout/activity_charge">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.cooltechworks.creditcarddesign.CreditCardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:card_holder_name="Ricarica" >

        </com.cooltechworks.creditcarddesign.CreditCardView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/nCard"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="creditcard"
            android:hint="@string/edtCard"
            android:inputType="number"
            android:maxLength="20" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edtExpiration"
                android:layout_marginLeft="10dp"

                android:inputType="number"
                android:maxLength="5" />

            <EditText
                android:id="@+id/ncvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtCvv"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/chargeNumber"
            android:textColor="@android:color/white" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>

</ScrollView>